color correction mobile

--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,19 @@ body {
   margin: 0;
   min-width: 320px;
   min-height: 100vh;
+  background-color: #010003;
+}
+
+@media (prefers-color-scheme: dark) {
+  body {
+      background-color: #010003; /* Sigue oscuro en modo oscuro */
+  }
+}
+
+@media (prefers-color-scheme: light) {
+  body {
+      background-color: #010003; /* Mantén oscuro incluso en modo claro */
+  }
 }
 
 h1 {
